--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,11 @@ body {
     text-align: center;
     padding: 20px;
   }
-
+p{
+  margin-top: 5px;
+  margin-right: 1px;
+  text-align: center;
+}
   .container {
     max-width: 600px;
     margin: auto;
@@ -113,9 +117,11 @@ body {
     display: inline-block;
   }
   #dica-bandeira-img{
+    border-radius: 7.2px;
+    vertical-align: middle;
+    padding: -1px;
     width: 80px;
     height: 80px;
-    padding: 0%;
     margin-left: 2px;
     margin-top: 10.1px;
   }
