--- a/css/style.css
+++ b/css/style.css
@@ -2,14 +2,160 @@
     padding: 0%;
     margin: 0%;
 }
+/* header */
 header{
     text-align: center;
 }
+/* header */
+
+/* body */
 body{
-    background-color: #293445;
+    background-color: #293445;  
 }
+/* body */
+
+/* header h1 */
 header h1{
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 2.5rem;
     color: white;
+}
+/* container */
+.container{
+    width: 50vw;
+    margin: auto;
+    margin-top: 5vh;
+}
+/* container */
+
+/* flagContainer */
+#flagContainer{
+    width: fit-content;
+    margin: auto;
+}
+/* flagContainer */
+
+/* flag */
+#flag{
+    width: 20vw;
+}
+/* flag */
+
+/* InputContainer */
+.input-container{
+    display: flex;
+    height: fit-content;
+}
+.legendas{
+    height: fit-content;
+}
+/* InputContainer */
+
+
+
+
+
+
+
+
+
+
+
+
+/* EDUUUUUUUUUUUUUU */
+/* dicaPais */
+
+.dicaContainer{
+
+  display: flex;
+  justify-content: space-evenly
+}
+
+/* dica */
+.dica{
+    width: 120px;
+    height: 120px;
+    background-color: #fff;
+    border: 1px solid black;
+}
+/*-------------------- BOTAO  ------------------------ */
+button {
+    --button_radius: 0.50em;
+    --button_color: #e8e8e8;
+    --button_outline_color: #000000;
+    font-size: 17px;
+    font-weight: bold;
+    border: none;
+    cursor: pointer;
+    border-radius: var(--button_radius);
+    background: var(--button_outline_color);
+    position: absolute;
+}  
+  .text-button {
+    display: block;
+    box-sizing: border-box;
+    border: 2px solid var(--button_outline_color);
+    border-radius: var(--button_radius);
+    padding: 0.75em 1.5em;
+    background: var(--button_color);
+    color: var(--button_outline_color);
+    transform: translateY(-0.2em);
+    transition: transform 0.1s ease;
+    padding: 14px 20px;
+  }
+  button:hover .text-button {
+    transform: translateY(-0.33em);
+  }
+  button:active .text-button {
+    transform: translateY(0);
+  }
+/*--------------------- INPUT  -------------------------- */
+.inputBox {
+    position: relative;
+    height: fit-content;
+  }
+  
+  .inputBox input {
+    padding: 14px 20px;
+    margin-right: 25px;
+    outline: none;
+    background: transparent;
+    border-radius: 5px;
+    color: #000;
+    background: #fff;
+    border: 1px solid#000;
+    font-size: 1em;
+    box-sizing: border-box;
+  }
+  /* -------------Inputzinho-------------------- */
+  .inputBox span {
+    position: absolute;
+    left: 0;
+    padding: 15px 20px;
+    pointer-events: none;
+    font-size: 1em;
+    transition: 0.4s cubic-bezier(0.05, 0.81, 0, 0.93);
+    color: #000;
+    letter-spacing: 0.1em;
+  }
+  .inputBox input:focus ~ span,
+  .inputBox input:valid ~ span {
+    font-size: 0.7em;
+    transform: translateX(14px) translateY(-7.5px);
+    padding: 0 5px;
+    border-radius: 5px;
+    background: #fff;
+    letter-spacing: 0em;
+    border: 1px solid;
+  }
+
+/*--------------------- LEGENDAS  -------------------------- */
+
+.legendas p {
+    display: inline-block; 
+    text-align: center; 
+    margin: 40px 25px;   /* Combine margens superior e direita */
+    vertical-align: middle; /* Centraliza verticalmente */
+    font-size: 17px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
