--- a/css/style.css
+++ b/css/style.css
@@ -1,161 +1,189 @@
+/* CLASSES GERAIS */
 *{
-    padding: 0%;
-    margin: 0%;
+  padding: 0%;
+  margin: 0%;
 }
-/* header */
-header{
-    text-align: center;
-}
-/* header */
-
-/* body */
 body{
-    background-color: #293445;  
+  overflow-x: hidden;
+  background-color: #242424;
+  height: 100vh
 }
-/* body */
-
-/* header h1 */
-header h1{
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 2.5rem;
-    color: white;
+#container{
+  width: 50vw;
+  margin: auto;
+  margin-top: 5vh;
 }
-/* container */
-.container{
-    width: 50vw;
-    margin: auto;
-    margin-top: 5vh;
-}
-/* container */
-
-/* flagContainer */
-#flagContainer{
-    width: fit-content;
-    margin: auto;
-}
-/* flagContainer */
-
-/* flag */
-#flag{
-    width: 20vw;
-}
-/* flag */
-
-/* InputContainer */
-.input-container{
-    display: flex;
-    height: fit-content;
-}
-.legendas{
-    height: fit-content;
-}
-/* InputContainer */
-
-
-
-
-
-
-
-
-
-
-
-
-/* EDUUUUUUUUUUUUUU */
-/* dicaPais */
-
-.dicaContainer{
-
+.interface{
+  width: fit-content;
+  height: 70px;
+  max-width: 1280px; 
+  margin: 0 auto;
   display: flex;
-  justify-content: space-evenly
+  gap: 50px;
+  align-items: center;
+}
+/* HEADER */
+
+
+
+/* SEÇÂO DO  TOPO DO SITE */
+.logo_planeta{
+  height: 15vh;
 }
 
-/* dica */
-.dica{
-    width: 120px;
-    height: 120px;
-    background-color: #fff;
-    border: 1px solid black;
+.logo_planeta:hover{
+  transform: scale(1.50);
+  cursor: pointer;
 }
+
+.titulo{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 4vh;
+  margin-left: 60px;
+  font-size: 2.4rem;
+}
+.flagworld_cor1{
+  color: #BF6545;
+}
+.flagworld_cor2{
+  color: #F2D57E;
+}
+
+.search{
+  text-align: center;
+}
+.flag{
+  width: 20vw;
+  align-items: center;
+} 
+
 /*-------------------- BOTAO  ------------------------ */
 button {
-    --button_radius: 0.50em;
-    --button_color: #e8e8e8;
-    --button_outline_color: #000000;
-    font-size: 17px;
-    font-weight: bold;
-    border: none;
-    cursor: pointer;
-    border-radius: var(--button_radius);
-    background: var(--button_outline_color);
-    position: absolute;
+  --button_radius: 0.50em;
+  --button_color: #e8e8e8;
+  --button_outline_color: #000000;
+  font-size: 17px;
+  font-weight: bold;
+  border: none;
+  cursor: pointer;
+  border-radius: var(--button_radius);
+  background: var(--button_outline_color);
+  position: center;
+  margin-right: 200px;
 }  
-  .text-button {
-    display: block;
-    box-sizing: border-box;
-    border: 2px solid var(--button_outline_color);
-    border-radius: var(--button_radius);
-    padding: 0.75em 1.5em;
-    background: var(--button_color);
-    color: var(--button_outline_color);
-    transform: translateY(-0.2em);
-    transition: transform 0.1s ease;
-    padding: 14px 20px;
-  }
-  button:hover .text-button {
-    transform: translateY(-0.33em);
-  }
-  button:active .text-button {
-    transform: translateY(0);
-  }
+.text-button {
+  display: block;
+  box-sizing: border-box;
+  border: 2px solid var(--button_outline_color);
+  border-radius: var(--button_radius);
+  padding: 0.75em 1.5em;
+  background: var(--button_color);
+  color: var(--button_outline_color);
+  transform: translateY(-0.2em);
+  transition: transform 0.1s ease;
+  padding: 14px 20px;
+}
+button:hover .text-button {
+  transform: translateY(-0.33em);
+}
+button:active .text-button {
+  transform: translateY(0);
+}
 /*--------------------- INPUT  -------------------------- */
-.inputBox {
-    position: relative;
-    height: fit-content;
-  }
-  
-  .inputBox input {
-    padding: 14px 20px;
-    margin-right: 25px;
-    outline: none;
-    background: transparent;
-    border-radius: 5px;
-    color: #000;
-    background: #fff;
-    border: 1px solid#000;
-    font-size: 1em;
-    box-sizing: border-box;
-  }
-  /* -------------Inputzinho-------------------- */
-  .inputBox span {
-    position: absolute;
-    left: 0;
-    padding: 15px 20px;
-    pointer-events: none;
-    font-size: 1em;
-    transition: 0.4s cubic-bezier(0.05, 0.81, 0, 0.93);
-    color: #000;
-    letter-spacing: 0.1em;
-  }
-  .inputBox input:focus ~ span,
-  .inputBox input:valid ~ span {
-    font-size: 0.7em;
-    transform: translateX(14px) translateY(-7.5px);
-    padding: 0 5px;
-    border-radius: 5px;
-    background: #fff;
-    letter-spacing: 0em;
-    border: 1px solid;
-  }
+.input-container{
+  display: flex;
+  height: fit-content;
+  gap: 20px;
+  margin-left: 140px;
+}
+.inputBox{
+  margin: 0 auto;
+}
+  #input-pais {
+  text-align: center;
+  margin-top: 2.5px;
+  width: 250px;
+  height: 40px;
+  border-radius: 5px;
+  outline: none;
+  border: 1px solid #303030;
+  border-bottom: 2px solid #9a9a9a;
+  padding-left: 10px;
+  padding-right: 10px;
+  background-color: #2d2d2d;
+  color: white;
+  transition: all 0.3s ease;
+  font-size: 25px;
+  font-family: 'Brush Script MT', cursive;
+}
 
-/*--------------------- LEGENDAS  -------------------------- */
+#input-pais::placeholder {
+  color: #9a9a9a;
+}
 
-.legendas p {
-    display: inline-block; 
-    text-align: center; 
-    margin: 40px 25px;   /* Combine margens superior e direita */
-    vertical-align: middle; /* Centraliza verticalmente */
-    font-size: 17px;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+#input-pais:hover {
+  background-color: #313131;
+}
+
+#input-pais:active,
+#input-pais:focus {
+  background-color: #1e1f20;
+  border: 1px solid #2d2d2d;
+  border-bottom: 2px solid #4cc2ff;
+}
+
+
+
+/*--------------------- SEÇAO DAS DICAS  -------------------------- */
+.dica{
+  margin-top: 20px;
+  width: 80px;
+  height: 80px;
+  padding-top: 0px;
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  align-items: center;
+  cursor: default;
+  color: #000;
+  background-color: black;
+  font-family: 'Brush Script MT', cursive;
+  color: white;
+}
+#dicasPais{
+  width: fit-content;
+  margin: auto;
+  text-align: center;
+
+}
+.dicaContainer{
+  max-width: 1280px; 
+  margin: 0 auto;
+  display: flex;
+  gap: 30px;
+}
+
+.square {
+  position: relative;
+  border: 1px solid hsla(0, 0%, 100%, .59);
+  box-sizing: border-box;
+  transition: flex-basis .1s ease;
+}
+
+.bandeira{ 
+  margin: 0 auto;
+  margin-top: 10px;
+  width: 60px;
+  height: 60px;
+  padding-top: 0px;
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  align-items: center;
+  cursor: default;
+  color: rgb(255, 255, 255);
+  border: none;
+  font-family: 'Brush Script MT', cursive;
 }
